# ResPathExplorer

./: .gitignore  README.md  pyproject.toml  requirements.txt
Examples/: prepare_data.ipynb
Examples/Foodborne bacteria/: Analysis.ipynb  prepare_data.ipynb
Exemples/Exemple 01/: Analysis_exemple01.ipynb  prepare_data_exemple01.ipynb
Exemples/Exemple 02/: Analysis_exemple02.ipynb  prepare_data_exemple02.ipynb
src/ResPathExplorer/: CARDAnalysis.py  KeggAnalysis.py  URL_pathway.py  VFDBAnalysis.py  mapper_KeggFunctions.py  rename_file.py  save_df_as_html.py  validate_color_code.py
tests/unit_tests/: TestVFDBAnalysis.py  test_CARDAnalysis.py  test_KeegAnalysis.py  test_URL_pathway.py  test_mapper_KeggFunctions.py  test_rename_file.py  test_save_df_as_html.py  test_validate_color_code.py
